--- a/main_dqn.ipynb
+++ b/main_dqn.ipynb
@@ -10,12 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-03 04:14:57.737850: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-10-03 04:14:57.738554: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-03 04:14:57.856250: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-03 04:15:00.770984: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-03 04:15:00.772228: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+      "2025-10-04 23:48:02.785218: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -30,17 +25,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-10-03 04:15:01.212983: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tasks.gridworld.Shapes object at 0x7f5831f49030>\n",
+      "<tasks.gridworld.Shapes object at 0x7fc9f5b31660>\n",
       "test performance: \n"
      ]
     },
@@ -60,60 +48,60 @@
      "text": [
       "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 0.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 20.0000\n",
+      "task \t 0 \t steps \t 2000 \t episodes \t 11 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 21.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 20.0000\n",
+      "task \t 0 \t steps \t 3000 \t episodes \t 16 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 61.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.1500\tep_reward \t 21.0000 \t reward \t 51.0000\n",
+      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 71.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 5000 \t episodes \t 26 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 81.0000\n",
+      "task \t 0 \t steps \t 5000 \t episodes \t 26 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 81.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 6000 \t episodes \t 31 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 131.0000\n",
+      "task \t 0 \t steps \t 6000 \t episodes \t 31 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 121.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 201.0000\n",
+      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 151.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 8000 \t episodes \t 41 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 282.0000\n",
+      "task \t 0 \t steps \t 8000 \t episodes \t 41 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 201.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 9000 \t episodes \t 48 \t eps \t 0.1500\tep_reward \t 11.0000 \t reward \t 426.0000\n",
+      "task \t 0 \t steps \t 9000 \t episodes \t 46 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 271.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 10000 \t episodes \t 54 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 549.0000\n",
+      "task \t 0 \t steps \t 10000 \t episodes \t 51 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 341.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 11000 \t episodes \t 59 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 639.0000\n",
+      "task \t 0 \t steps \t 11000 \t episodes \t 56 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 391.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 12000 \t episodes \t 65 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 760.0000\n",
+      "task \t 0 \t steps \t 12000 \t episodes \t 61 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 441.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 871.0000\n",
+      "task \t 0 \t steps \t 13000 \t episodes \t 66 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 481.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 961.0000\n",
+      "task \t 0 \t steps \t 14000 \t episodes \t 71 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 531.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 15000 \t episodes \t 81 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1061.0000\n",
+      "task \t 0 \t steps \t 15000 \t episodes \t 76 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 581.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 16000 \t episodes \t 86 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1171.0000\n",
+      "task \t 0 \t steps \t 16000 \t episodes \t 81 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 671.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 17000 \t episodes \t 91 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1251.0000\n",
+      "task \t 0 \t steps \t 17000 \t episodes \t 86 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 791.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 18000 \t episodes \t 96 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1361.0000\n",
+      "task \t 0 \t steps \t 18000 \t episodes \t 91 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 891.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 19000 \t episodes \t 101 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1451.0000\n",
+      "task \t 0 \t steps \t 19000 \t episodes \t 96 \t eps \t 0.1500\tep_reward \t 40.0000 \t reward \t 1011.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 20000 \t episodes \t 106 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1551.0000\n"
+      "task \t 0 \t steps \t 20000 \t episodes \t 101 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1101.0000\n"
      ]
     }
    ],
    "source": [
-    "agent,tasks = main(0)"
+    "agent,tasks = main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c0a141ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b40a0d5d660485dab24f96da49fa311",
+       "model_id": "8dfa96f1e1604154ae75598dae263587",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,10 +129,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards\u001b[38;5;241m=\u001b[39m\u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest_agent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtasks\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreturn_history\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mvisualize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/OneDrive/sem_7/rl/sfr/agents/dqn.py:174\u001b[0m, in \u001b[0;36mDQN.test_agent\u001b[0;34m(self, task, return_history, visualize, pause, max_steps)\u001b[0m\n\u001b[1;32m    165\u001b[0m episode \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    166\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_reward\u001b[39m\u001b[38;5;124m\"\u001b[39m: total_reward,\n\u001b[1;32m    167\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msteps\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(actions),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    170\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrewards\u001b[39m\u001b[38;5;124m\"\u001b[39m: rewards\n\u001b[1;32m    171\u001b[0m }\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m visualize:\n\u001b[0;32m--> 174\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender_episode_history_rich\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepisode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpause\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_history:\n\u001b[1;32m    177\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m episode\n",
-      "File \u001b[0;32m~/OneDrive/sem_7/rl/sfr/agents/dqn.py:295\u001b[0m, in \u001b[0;36mDQN.render_episode_history_rich\u001b[0;34m(episode, task, agent, pause, style_map)\u001b[0m\n\u001b[1;32m    292\u001b[0m outer\u001b[38;5;241m.\u001b[39madd_column()\n\u001b[1;32m    293\u001b[0m outer\u001b[38;5;241m.\u001b[39madd_row(grid_table, panel)\n\u001b[0;32m--> 295\u001b[0m \u001b[43mlive\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mouter\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    297\u001b[0m \u001b[38;5;66;03m# if we've just displayed the final state (i == steps), break after showing the totals\u001b[39;00m\n\u001b[1;32m    298\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m total_steps:\n",
-      "File \u001b[0;32m~/miniconda3/envs/rl/lib/python3.10/site-packages/rich/live.py:235\u001b[0m, in \u001b[0;36mLive.update\u001b[0;34m(self, renderable, refresh)\u001b[0m\n\u001b[1;32m    233\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(renderable, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    234\u001b[0m     renderable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconsole\u001b[38;5;241m.\u001b[39mrender_str(renderable)\n\u001b[0;32m--> 235\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_lock:\n\u001b[1;32m    236\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_renderable \u001b[38;5;241m=\u001b[39m renderable\n\u001b[1;32m    237\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m refresh:\n",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards\u001b[38;5;241m=\u001b[39m\u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest_agent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtasks\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreturn_history\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mvisualize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Downloads/sfr/agents/dqn.py:205\u001b[0m, in \u001b[0;36mDQN.test_agent\u001b[0;34m(self, task, return_history, visualize, pause, max_steps)\u001b[0m\n\u001b[1;32m    196\u001b[0m episode \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    197\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_reward\u001b[39m\u001b[38;5;124m\"\u001b[39m: total_reward,\n\u001b[1;32m    198\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msteps\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(actions),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    201\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrewards\u001b[39m\u001b[38;5;124m\"\u001b[39m: rewards\n\u001b[1;32m    202\u001b[0m }\n\u001b[1;32m    204\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m visualize:\n\u001b[0;32m--> 205\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender_episode_history_rich\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepisode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpause\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_history:\n\u001b[1;32m    208\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m episode\n",
+      "File \u001b[0;32m~/Downloads/sfr/agents/dqn.py:334\u001b[0m, in \u001b[0;36mDQN.render_episode_history_rich\u001b[0;34m(episode, task, agent, pause, style_map)\u001b[0m\n\u001b[1;32m    331\u001b[0m             live\u001b[38;5;241m.\u001b[39mupdate(Table\u001b[38;5;241m.\u001b[39mgrid()\u001b[38;5;241m.\u001b[39madd_row(grid_table, done_panel))\n\u001b[1;32m    332\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m--> 334\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    336\u001b[0m console\u001b[38;5;241m.\u001b[39mprint(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--- Replay complete ---\u001b[39m\u001b[38;5;124m\"\u001b[39m, style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbold magenta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
