--- a/main_dqn.ipynb
+++ b/main_dqn.ipynb
@@ -2,25 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3a133467",
+   "execution_count": 3,
+   "id": "b4430004",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-10-04 23:48:02.785218: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "Using device: cuda\n"
      ]
     }
    ],
+   "source": [
+    "import torch\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3a133467",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from main_dqn import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b5a28413",
    "metadata": {},
    "outputs": [
@@ -28,63 +40,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tasks.gridworld.Shapes object at 0x7fc9f5b31660>\n",
-      "test performance: \n"
+      "<tasks.gridworld.Shapes object at 0x7f7343516210>\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ap/miniconda3/envs/rl/lib/python3.10/site-packages/numpy/_core/fromnumeric.py:3860: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/home/ap/miniconda3/envs/rl/lib/python3.10/site-packages/numpy/_core/_methods.py:145: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 0.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 2000 \t episodes \t 11 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 21.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 3000 \t episodes \t 16 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 61.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 71.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 5000 \t episodes \t 26 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 81.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 6000 \t episodes \t 31 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 121.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 151.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 8000 \t episodes \t 41 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 201.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 9000 \t episodes \t 46 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 271.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 10000 \t episodes \t 51 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 341.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 11000 \t episodes \t 56 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 391.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 12000 \t episodes \t 61 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 441.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 13000 \t episodes \t 66 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 481.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 14000 \t episodes \t 71 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 531.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 15000 \t episodes \t 76 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 581.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 16000 \t episodes \t 81 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 671.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 17000 \t episodes \t 86 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 791.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 18000 \t episodes \t 91 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 891.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 19000 \t episodes \t 96 \t eps \t 0.1500\tep_reward \t 40.0000 \t reward \t 1011.0000\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 20000 \t episodes \t 101 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1101.0000\n"
+     "ename": "TypeError",
+     "evalue": "can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m agent,tasks \u001b[38;5;241m=\u001b[39m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/prog/ML/adv_rl/main_dqn.py:81\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     79\u001b[0m train_tasks \u001b[38;5;241m=\u001b[39m [task]\n\u001b[1;32m     80\u001b[0m n_samples\u001b[38;5;241m=\u001b[39mconf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_samples\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 81\u001b[0m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_tasks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_tasks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_samples\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_samples\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_tasks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (agent,train_tasks)\n",
+      "File \u001b[0;32m~/prog/ML/adv_rl/agents/dqn.py:115\u001b[0m, in \u001b[0;36mDQN.train\u001b[0;34m(self, train_tasks, n_samples, viewers, n_view_ev, test_tasks, n_test_ev)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_active_training_task(index)\n\u001b[1;32m    112\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_samples):\n\u001b[1;32m    113\u001b[0m     \n\u001b[1;32m    114\u001b[0m     \u001b[38;5;66;03m# train\u001b[39;00m\n\u001b[0;32m--> 115\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnext_sample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mviewer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_view_ev\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    117\u001b[0m     \u001b[38;5;66;03m# test\u001b[39;00m\n\u001b[1;32m    118\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m t \u001b[38;5;241m%\u001b[39m n_test_ev \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "File \u001b[0;32m~/prog/ML/adv_rl/agents/agent.py:196\u001b[0m, in \u001b[0;36mAgent.next_sample\u001b[0;34m(self, viewer, n_view_ev)\u001b[0m\n\u001b[1;32m    193\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mepisode_reward_hist\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mepisode_reward)  \n\u001b[1;32m    195\u001b[0m \u001b[38;5;66;03m# compute the Q-values in the current state\u001b[39;00m\n\u001b[0;32m--> 196\u001b[0m q \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_Q_values\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43ms_enc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    198\u001b[0m \u001b[38;5;66;03m# choose an action using the epsilon-greedy policy\u001b[39;00m\n\u001b[1;32m    199\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_epsilon_greedy(q)\n",
+      "File \u001b[0;32m~/prog/ML/adv_rl/agents/dqn.py:47\u001b[0m, in \u001b[0;36mDQN.get_Q_values\u001b[0;34m(self, s, s_enc)\u001b[0m\n\u001b[1;32m     45\u001b[0m     s_enc_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(s_enc)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[1;32m     46\u001b[0m     q_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mQ(s_enc_tensor)\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mq_values\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
      ]
     }
    ],
@@ -94,45 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c0a141ee",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dfa96f1e1604154ae75598dae263587",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'agent' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards\u001b[38;5;241m=\u001b[39m\u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest_agent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtasks\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreturn_history\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mvisualize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Downloads/sfr/agents/dqn.py:205\u001b[0m, in \u001b[0;36mDQN.test_agent\u001b[0;34m(self, task, return_history, visualize, pause, max_steps)\u001b[0m\n\u001b[1;32m    196\u001b[0m episode \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    197\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_reward\u001b[39m\u001b[38;5;124m\"\u001b[39m: total_reward,\n\u001b[1;32m    198\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msteps\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(actions),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    201\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrewards\u001b[39m\u001b[38;5;124m\"\u001b[39m: rewards\n\u001b[1;32m    202\u001b[0m }\n\u001b[1;32m    204\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m visualize:\n\u001b[0;32m--> 205\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender_episode_history_rich\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepisode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpause\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_history:\n\u001b[1;32m    208\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m episode\n",
-      "File \u001b[0;32m~/Downloads/sfr/agents/dqn.py:334\u001b[0m, in \u001b[0;36mDQN.render_episode_history_rich\u001b[0;34m(episode, task, agent, pause, style_map)\u001b[0m\n\u001b[1;32m    331\u001b[0m             live\u001b[38;5;241m.\u001b[39mupdate(Table\u001b[38;5;241m.\u001b[39mgrid()\u001b[38;5;241m.\u001b[39madd_row(grid_table, done_panel))\n\u001b[1;32m    332\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m--> 334\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    336\u001b[0m console\u001b[38;5;241m.\u001b[39mprint(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--- Replay complete ---\u001b[39m\u001b[38;5;124m\"\u001b[39m, style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbold magenta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards\u001b[38;5;241m=\u001b[39m\u001b[43magent\u001b[49m\u001b[38;5;241m.\u001b[39mtest_agent(tasks[\u001b[38;5;241m0\u001b[39m],return_history\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,visualize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'agent' is not defined"
      ]
     }
    ],
@@ -151,7 +96,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rl",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
