--- a/main_dqn.ipynb
+++ b/main_dqn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b4430004",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3a133467",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b5a28413",
    "metadata": {},
    "outputs": [
@@ -40,22 +40,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tasks.gridworld.Shapes object at 0x7f7343516210>\n"
+      "<tasks.gridworld.Shapes object at 0x7fa5db6082f0>\n",
+      "test performance: \n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m agent,tasks \u001b[38;5;241m=\u001b[39m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/prog/ML/adv_rl/main_dqn.py:81\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     79\u001b[0m train_tasks \u001b[38;5;241m=\u001b[39m [task]\n\u001b[1;32m     80\u001b[0m n_samples\u001b[38;5;241m=\u001b[39mconf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_samples\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 81\u001b[0m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_tasks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_tasks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_samples\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_samples\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_tasks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (agent,train_tasks)\n",
-      "File \u001b[0;32m~/prog/ML/adv_rl/agents/dqn.py:115\u001b[0m, in \u001b[0;36mDQN.train\u001b[0;34m(self, train_tasks, n_samples, viewers, n_view_ev, test_tasks, n_test_ev)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_active_training_task(index)\n\u001b[1;32m    112\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_samples):\n\u001b[1;32m    113\u001b[0m     \n\u001b[1;32m    114\u001b[0m     \u001b[38;5;66;03m# train\u001b[39;00m\n\u001b[0;32m--> 115\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnext_sample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mviewer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_view_ev\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    117\u001b[0m     \u001b[38;5;66;03m# test\u001b[39;00m\n\u001b[1;32m    118\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m t \u001b[38;5;241m%\u001b[39m n_test_ev \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "File \u001b[0;32m~/prog/ML/adv_rl/agents/agent.py:196\u001b[0m, in \u001b[0;36mAgent.next_sample\u001b[0;34m(self, viewer, n_view_ev)\u001b[0m\n\u001b[1;32m    193\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mepisode_reward_hist\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mepisode_reward)  \n\u001b[1;32m    195\u001b[0m \u001b[38;5;66;03m# compute the Q-values in the current state\u001b[39;00m\n\u001b[0;32m--> 196\u001b[0m q \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_Q_values\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43ms_enc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    198\u001b[0m \u001b[38;5;66;03m# choose an action using the epsilon-greedy policy\u001b[39;00m\n\u001b[1;32m    199\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_epsilon_greedy(q)\n",
-      "File \u001b[0;32m~/prog/ML/adv_rl/agents/dqn.py:47\u001b[0m, in \u001b[0;36mDQN.get_Q_values\u001b[0;34m(self, s, s_enc)\u001b[0m\n\u001b[1;32m     45\u001b[0m     s_enc_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(s_enc)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[1;32m     46\u001b[0m     q_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mQ(s_enc_tensor)\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mq_values\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ritish/prog/ML/.venv/lib/python3.13/site-packages/numpy/_core/fromnumeric.py:3860: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/home/ritish/prog/ML/.venv/lib/python3.13/site-packages/numpy/_core/_methods.py:145: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 10.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 2000 \t episodes \t 11 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 21.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 3000 \t episodes \t 16 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 31.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.1500\tep_reward \t 11.0000 \t reward \t 63.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 5000 \t episodes \t 26 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 83.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 6000 \t episodes \t 31 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 133.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 163.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 8000 \t episodes \t 41 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 183.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 9000 \t episodes \t 46 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 243.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 10000 \t episodes \t 52 \t eps \t 0.1500\tep_reward \t 21.0000 \t reward \t 346.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 11000 \t episodes \t 59 \t eps \t 0.1500\tep_reward \t 21.0000 \t reward \t 481.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 12000 \t episodes \t 65 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 633.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 13000 \t episodes \t 70 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 703.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 14000 \t episodes \t 75 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 813.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 15000 \t episodes \t 80 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 943.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 16000 \t episodes \t 85 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1033.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 17000 \t episodes \t 90 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 1113.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 18000 \t episodes \t 95 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1223.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 19000 \t episodes \t 100 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1353.0000\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 20000 \t episodes \t 105 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 1493.0000\n"
      ]
     }
    ],
@@ -70,15 +111,41 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'agent' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards\u001b[38;5;241m=\u001b[39m\u001b[43magent\u001b[49m\u001b[38;5;241m.\u001b[39mtest_agent(tasks[\u001b[38;5;241m0\u001b[39m],return_history\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,visualize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'agent' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1149e216d0b40ad9b99e3d372a9bd84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">--- Replay complete ---</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;35m--- Replay complete ---\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
