--- a/main_dqn.ipynb
+++ b/main_dqn.ipynb
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tasks.gridworld.Shapes object at 0x7fa5db6082f0>\n",
+      "<tasks.gridworld.Shapes object at 0x7f9118755d30>\n",
       "test performance: \n"
      ]
     },
@@ -58,45 +58,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 10.0000\n",
+      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 50.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 2000 \t episodes \t 11 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 21.0000\n",
+      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 60.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 3000 \t episodes \t 16 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 31.0000\n",
+      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 70.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.1500\tep_reward \t 11.0000 \t reward \t 63.0000\n",
+      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 111.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 5000 \t episodes \t 26 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 83.0000\n",
+      "task \t 0 \t steps \t 5000 \t episodes \t 27 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 193.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 6000 \t episodes \t 31 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 133.0000\n",
+      "task \t 0 \t steps \t 6000 \t episodes \t 32 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 285.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 163.0000\n",
+      "task \t 0 \t steps \t 7000 \t episodes \t 38 \t eps \t 0.5500\tep_reward \t 1.0000 \t reward \t 378.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 8000 \t episodes \t 41 \t eps \t 0.1500\tep_reward \t 0.0000 \t reward \t 183.0000\n",
+      "task \t 0 \t steps \t 8000 \t episodes \t 44 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 471.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 9000 \t episodes \t 46 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 243.0000\n",
+      "task \t 0 \t steps \t 9000 \t episodes \t 49 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 562.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 10000 \t episodes \t 52 \t eps \t 0.1500\tep_reward \t 21.0000 \t reward \t 346.0000\n",
+      "task \t 0 \t steps \t 10000 \t episodes \t 54 \t eps \t 0.5500\tep_reward \t 31.0000 \t reward \t 663.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 11000 \t episodes \t 59 \t eps \t 0.1500\tep_reward \t 21.0000 \t reward \t 481.0000\n",
+      "task \t 0 \t steps \t 11000 \t episodes \t 60 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 805.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 12000 \t episodes \t 65 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 633.0000\n",
+      "task \t 0 \t steps \t 12000 \t episodes \t 65 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 935.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 13000 \t episodes \t 70 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 703.0000\n",
+      "task \t 0 \t steps \t 13000 \t episodes \t 70 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1056.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 14000 \t episodes \t 75 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 813.0000\n",
+      "task \t 0 \t steps \t 14000 \t episodes \t 78 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 1181.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 15000 \t episodes \t 80 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 943.0000\n",
+      "task \t 0 \t steps \t 15000 \t episodes \t 83 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1291.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 16000 \t episodes \t 85 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1033.0000\n",
+      "task \t 0 \t steps \t 16000 \t episodes \t 89 \t eps \t 0.5500\tep_reward \t 31.0000 \t reward \t 1454.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 17000 \t episodes \t 90 \t eps \t 0.1500\tep_reward \t 10.0000 \t reward \t 1113.0000\n",
+      "task \t 0 \t steps \t 17000 \t episodes \t 94 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1566.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 18000 \t episodes \t 95 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1223.0000\n",
+      "task \t 0 \t steps \t 18000 \t episodes \t 99 \t eps \t 0.5500\tep_reward \t 40.0000 \t reward \t 1726.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 19000 \t episodes \t 100 \t eps \t 0.1500\tep_reward \t 20.0000 \t reward \t 1353.0000\n",
+      "task \t 0 \t steps \t 19000 \t episodes \t 104 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 1906.0000\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 20000 \t episodes \t 105 \t eps \t 0.1500\tep_reward \t 30.0000 \t reward \t 1493.0000\n"
+      "task \t 0 \t steps \t 20000 \t episodes \t 109 \t eps \t 0.5500\tep_reward \t 40.0000 \t reward \t 2067.0000\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1149e216d0b40ad9b99e3d372a9bd84",
+       "model_id": "f1b48155b2fa4f88977ffdbca70f7ec2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,17 +135,17 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">--- Replay complete ---</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;35m--- Replay complete ---\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards\u001b[38;5;241m=\u001b[39m\u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest_agent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtasks\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreturn_history\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mvisualize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/prog/ML/adv_rl/agents/dqn.py:206\u001b[0m, in \u001b[0;36mDQN.test_agent\u001b[0;34m(self, task, return_history, visualize, pause, max_steps)\u001b[0m\n\u001b[1;32m    197\u001b[0m episode \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    198\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_reward\u001b[39m\u001b[38;5;124m\"\u001b[39m: total_reward,\n\u001b[1;32m    199\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msteps\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(actions),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    202\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrewards\u001b[39m\u001b[38;5;124m\"\u001b[39m: rewards\n\u001b[1;32m    203\u001b[0m }\n\u001b[1;32m    205\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m visualize:\n\u001b[0;32m--> 206\u001b[0m     \u001b[43mAgent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender_episode_history_rich\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepisode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpause\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    208\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_history:\n\u001b[1;32m    209\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m episode\n",
+      "File \u001b[0;32m~/prog/ML/adv_rl/agents/agent.py:372\u001b[0m, in \u001b[0;36mAgent.render_episode_history_rich\u001b[0;34m(episode, task, agent, pause, style_map)\u001b[0m\n\u001b[1;32m    370\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m    371\u001b[0m         \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m--> 372\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpause\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    373\u001b[0m console\u001b[38;5;241m.\u001b[39mprint(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--- Replay complete ---\u001b[39m\u001b[38;5;124m\"\u001b[39m, style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbold magenta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
