--- a/main_sfdqn.ipynb
+++ b/main_sfdqn.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21010825",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7f47ae04",
    "metadata": {},
    "outputs": [],
@@ -24,20 +32,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fd264980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test performance: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ritish/prog/ML/.venv/lib/python3.13/site-packages/numpy/_core/fromnumeric.py:3860: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/home/ritish/prog/ML/.venv/lib/python3.13/site-packages/numpy/_core/_methods.py:145: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 10.0000\tGPI% \t 0.0000 \t w_err \t 9.9973\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 40.0000\tGPI% \t 0.0000 \t w_err \t 9.8496\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 70.0000\tGPI% \t 0.0000 \t w_err \t 9.7041\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 112.0000\tGPI% \t 0.0000 \t w_err \t 9.5125\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 5000 \t episodes \t 27 \t eps \t 0.5500\tep_reward \t 1.0000 \t reward \t 164.0000\tGPI% \t 0.0000 \t w_err \t 9.2786\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 6000 \t episodes \t 34 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 258.0000\tGPI% \t 0.0000 \t w_err \t 8.8719\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 7000 \t episodes \t 39 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 290.0000\tGPI% \t 0.0000 \t w_err \t 8.7400\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 8000 \t episodes \t 45 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 332.0000\tGPI% \t 0.0000 \t w_err \t 8.5675\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 9000 \t episodes \t 50 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 412.0000\tGPI% \t 0.0000 \t w_err \t 8.2349\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 10000 \t episodes \t 55 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 463.0000\tGPI% \t 0.0000 \t w_err \t 8.0333\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 11000 \t episodes \t 61 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 514.0000\tGPI% \t 0.0000 \t w_err \t 7.8367\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 12000 \t episodes \t 66 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 584.0000\tGPI% \t 0.0000 \t w_err \t 7.5704\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 644.0000\tGPI% \t 0.0000 \t w_err \t 7.3496\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 685.0000\tGPI% \t 0.0000 \t w_err \t 7.2054\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 15000 \t episodes \t 81 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 757.0000\tGPI% \t 0.0000 \t w_err \t 6.9600\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 16000 \t episodes \t 86 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 827.0000\tGPI% \t 0.0000 \t w_err \t 6.7243\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 17000 \t episodes \t 91 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 877.0000\tGPI% \t 0.0000 \t w_err \t 6.5610\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 18000 \t episodes \t 96 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 957.0000\tGPI% \t 0.0000 \t w_err \t 6.3083\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 19000 \t episodes \t 101 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 1027.0000\tGPI% \t 0.0000 \t w_err \t 6.0956\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 20000 \t episodes \t 107 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1108.0000\tGPI% \t 0.0000 \t w_err \t 5.8608\n"
+     ]
+    }
+   ],
    "source": [
     "agent, tasks = main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9fa36ac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f427ea77250494da91bf4ee0a10c2c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">--- Replay complete ---</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;35m--- Replay complete ---\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rewards = agent.test_agent(tasks[0], return_history=1, visualize=1)"
    ]
